--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: rgb(17, 17, 69);
   color: white;
+  min-height: 100vh;
+  width: 100%;
+  margin: 0px;
+  display: grid;
+  place-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+  width: 80%; 
+  background-color:midnightblue;
+  align-items: center;
+  display: block;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form > * {
+  display: block;
+}
+
+input ,select {
+  width: 80%;
+  border-radius: 3px;
+  margin: 10px auto;
+  height: 30px;
+}
+
+button {
+  background-color: gray;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 4px;
+  color: white;
+  padding: 5px;
+  margin: 0px auto;
+}
+
+button .active {
+  background-color: rgb(106, 24, 80);
+}
+
+button .active:hover {
+  background-color: rgb(133, 44, 105);
 }
