--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,10 @@ button {
   margin: 0px auto;
 }
 
-button .active {
+.active {
   background-color: rgb(106, 24, 80);
 }
 
-button .active:hover {
+.active:hover {
   background-color: rgb(133, 44, 105);
 }
